# Auto_Cursor

./: .gitignore  README.md  config.yaml.example  export.py  import_emails.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  config.py  database.py  exceptions.py  logger.py
register/: __init__.py  register_worker.py
services/: __init__.py  capsolver.py  email_manager.py  email_monitor.py  fetch_manager.py  fetch_service.py  phone_service.py  proxy_pool.py  token_pool.py  uuid.py  yescaptcha.py
